test/tests/compiler/16_characters_and_strings/invalid_lex/string_bad_escape_sequence.plx
pub fn main(none) i32 {
    str: *char = "foo\ybar"
    return 0
}
